netsuite/10.0/modules/ROOT/pages/netsuite-studio-configure.adoc
= Use Studio to Configure NetSuite Connector
:page-aliases: connectors::netsuite/netsuite-studio-configure.adoc, connectors::netsuite/netsuite-to-use-design-center.adoc

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-input-source,Configure an input source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<conigure-other-fields,Configure the other connector fields>>.

If you are new to configuring connectors in Studio, see xref:introduction/intro-config-use-studio.adoc[Use Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see xref:netsuite/netsuite-connector-reference.adoc[Netsuite Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector: 

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Netsuite Connector to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type `Netsuite` in the search field.
. Click the connector name in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-input-source]]
== Configure an Input Source

An input source initiates a flow when a specified condition is met.
You can configure one of these input sources to use with Netsuite:

* `HTTP Listener`, which initiates a flow each time it receives a request on the configured host and port
* `Scheduler`, which initiates a flow when a time-based condition is met

For example, to configure HTTP Listener, follow these steps:

. In the *Mule Palette* view, select *HTTP > Listener*.
. Drag *Listener* to the Studio canvas.
. On the *Listener* configuration screen, optionally change the value of the *Display Name* field.
. Specify a value for the *Path* field.
. Click the plus sign (+) next to the *Connector configuration* field to configure a global element that can be used by all instances of `HTTP Listener` in the app.
. On the *General* tab, specify connection information.
. On the *TLS* tab, optionally specify TLS information.
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specific server.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you immediately define a specific operation for that connector to perform.

To add an operation for Netsuite, follow these steps:

. In the *Mule Palette* view, select *Netsuite* and then select the desired operation.
. Drag the operation onto the Studio canvas to the right of the input source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, it’s best to configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials the connector uses to access the target Netsuite system. 

To configure the global element for Netsuite Connector, follow these steps:

. Select the name of the connector in the Studio canvas.
. In the configuration screen for the operation, click the plus sign (+) next to the *Connector configuration* field to access the global element configuration fields.
. On the *General* tab, select an authentication mechanism and configure it as described:
+
[%header,cols="30s,70a"]
|===
|Configuration |Description
|Login Authentication |Makes use of the SuiteTalk's login API call on the first request sent by the connector to establish a session with NetSuite.
|Request Based Authentication |Using this strategy, you can send user credentials in the SOAP header of each request instead of authenticating to NetSuite by invoking login.
|Single Sign-On Authentication |This is a token based authentication system that avoids the use of environment username and password. Here you supply a privateKey together with other information. The connector is then responsible for generating an authentication token and establishing a session with NetSuite via the `ssoLogin` API call on the first request.
|Token Authentication |Similar to Single Sign-On Login Authentication, this is a token based authentication system. However, instead of using a privateKey generated via openssl, this uses a consumer and token key/secret pairs which are established within the NetSuite environment.
|===
+
. Configure these fields according your selection:
.. Login Authentication
+
image::netsuite-login-studio.png[login authentication]
+
[%header,cols="30s,70a"]
|===
|Parameter |Description
|Name |Enter a name for the configuration with which to reference it later.
|Email |Enter the login email of the NetSuite UI.
|Password |Enter the corresponding password to log into NetSuite UI.
|Account |Enter the account ID of the SuiteTalk NetSuite web services. This is usually found within NetSuite sandbox UI under Setup > Integration > Web Service Preferences.
|Role Id |Enter the role ID for the user in SuiteTalk, which determines the Processor privileges.
|Application Id |Enter the application ID corresponding to the Integration record to be used.
|===

.. Request Based Authentication
+
image::netsuite-request-studio.png[request based authentication]
+
[%header,cols="30s,70a"]
|===
|Parameter |Description
|Name |Enter a name for the configuration with which to reference it later.
|Email |Enter the login email of the NetSuite UI.
|Password |Enter the corresponding password to log into NetSuite UI.
|Account |Enter the account ID of the SuiteTalk NetSuite web services. This is usually found within NetSuite sandbox UI under Setup > Integration > Web Service Preferences.
|Role Id |Enter the role ID for the user in SuiteTalk, which determines the Processor privileges.
|Application Id |Enter the application ID corresponding to the Integration record to be used.
|===
.. SSO Authentication
+
image::netsuite-sso-studio.png[request based authentication]
+
[%header,cols="30s,70a"]
|===
|Parameter |Description
|Name |Enter a name for the configuration so it can be referenced later.
|SSO Library | Add your SSO dependency as a Maven dependency format once you click Add Dependency.
|Partner Id |Enter the partner ID used in the mapping process.
|Partner Account |Enter the account ID of the SuiteTalk NetSuite web services.
|Company ID |Enter the company ID used in the mapping process for the connector to generate a token.
|User ID |Enter the user ID used in the mapping process for the connector to generate a token.
|Key File |Enter the privateKey file name to pick up from the project. This file should be the .der file generated as per NetSuite’s specifications. This is used to encrypt the company ID and user ID into a token for ssoLogin.
|Application Id |Enter the application ID corresponding to the Integration record to be used.
|===
+
.. Token Authentication
+
image::netsuite-token-studio.png[request based authentication]
+
[%header,cols="30s,70a"]
|===
|Parameter |Description
|Consumer Key |Enter the consumer key value for the token based authentication enabled integration record being used.
|Consumer Secret |Enter the consumer secret value for the token based authentication enabled integration record being used.
|Token ID |Enter the token ID representing the unique combination of a user and integration generated within the NetSuite environment.
|Token Secret |Enter the respective token secret for the user/integration pair.
|Account |Enter the account ID of the SuiteTalk NetSuite web services. This is usually found within NetSuite sandbox UI under Set Up > Integration > Web Service Preferences.
|Signature algorithm | Type of HMAC signature algorithm
|===
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

== Use Case: Call NetSuite RESTlet

This use case shows how to call RESTlets that are deployed in NetSuite instances.

By following these instructions, you can:

* Create a customer record.
* Retrieve a customer record.
* Delete a record.

=== Prerequisites

* Java 8
* Anypoint Studio 7.0.x
* Mule Runtime 4.0.x EE
* DataWeave 2.0
* Access to a NetSuite instance with credentials in the `mule-app.properties` file

=== Deploy a Script as a RESTlet

. Create a sample JavaScript script:
+
[source,javascript,linenums]
----
// Get a standard NetSuite record
function getRecord(datain)
{
    return nlapiLoadRecord(datain.recordtype, datain.id);
    // for example, recordtype="customer", id="769"
}

// Create a standard NetSuite record

function createRecord(datain)
{
    var err = new Object();

    // Validate if mandatory record type is set in the request
    if (!datain.recordtype)
    {
        err.status = "failed";
        err.message= "missing recordtype";
        return err;
    }

    var record = nlapiCreateRecord(datain.recordtype);

    for (var fieldname in datain)
    {
      if (datain.hasOwnProperty(fieldname))
      {
        if (fieldname != 'recordtype' && fieldname != 'id')
        {
          var value = datain[fieldname];
            if (value && typeof value != 'object')
            // ignore other type of parameters
            {
              record.setFieldValue(fieldname, value);
            }
        }
      }
    }
    var recordId = nlapiSubmitRecord(record);
    nlapiLogExecution('DEBUG','id='+recordId);
    var nlobj = nlapiLoadRecord(datain.recordtype,recordId);
    return nlobj;
}

// Delete a standard NetSuite record
function deleteRecord(datain)
{
  nlapiDeleteRecord(datain.recordtype, datain.id);
  // for example: recordtype="customer", id="769"

}
----
+
. Enable SuiteScript and web services in your account. Log into NetSuite and click Set Up > Company > Enable Features > SuiteCloud.
+
image::netsuite-enable-suitescript.png[Enable SuiteScript]
+
. Create a new script and upload the file created before. Go to Customization > Scripting > Scripts > New.
. Pick the script file, click Create Script Record, and select RESTlet.
+
image::netsuite-script-type.png[Select Script Type]
+
. Fill out the form using the content of the script you uploaded, and deploy the script.
+
image::netsuite-setup-script.png[Setup Script]
+
. After selecting your audience you see the following page. Take note of the script and deploy numbers in the external URL since you  need them to call the RESTlet.
+
image::netsuite-script-deployment.png[Script Deployment]

=== Import the Project

* Go to File > Import.
* Select Anypoint Studio Project from External Location under the Anypoint Studio parent folder.
* Provide the root path to the demo project folder.
* Select Mule Runtime (4.1.1) or later.
* Click Finish.
* Configure the credentials, as well as the deployed script and deploy IDs, inside the file `src/main/resources/mule-app.properties`.
+
[source,javascript,linenums]
----
netsuite.email=
netsuite.password=
netsuite.account=
netsuite.roleId=
netsuite.applicationId=
netsuite.subsidiary=
netsuite.script=
netsuite.deploy=
----
+
. Open the Global Element Configuration.
. Click the Test Connection button to ensure there is connectivity with the sandbox.
+
Test Connection is a crucial step. If you experience connectivity issues, you won't be able to execute any part of this use case, nor make use of DataSense.
+
. A successful message should pop up.
+
image::netsuite-demo-connection-test.png[Test Connection]
+
. Open a browser and access the URL `+http://localhost:8081+`. You should see the application deployed:
+
image::netsuite-demo-main-page.png[Demo Index]

=== About the flows

. html-form-flow: Renders the HTML form with a `parseTemplate` component.
+
image::netsuite-html-form-flow.png[Flow HMTL Form]
+
. restletGet: Calls the GET function of a RESTlet.
+
image::netsuite-restlet-get.png[Flow HMTL Form]
+
. restletPost: Calls the POST function of a RESTlet.
+
image::netsuite-restlet-post.png[Flow Processor 1]
+
. restletDelete: Calls the DELETE function of a RESTlet.
+
image::netsuite-restlet-delete.png[Flow Processor 1]

== Next Steps

After configuring Studio, see the xref:netsuite-examples.adoc[Examples] topic
for more configuration ideas.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:index.adoc[NetSuite connector]
* xref:netsuite-reference.adoc[NetSuite Connector 9.3 Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
